# soulProject

./: .gitignore  CMakeLists.txt  README.md  run.ps1
assets/desciption/: 备忘录.md
game_src/: main.cpp
game_src/core/: bullet_manager.cpp  game.cpp
game_src/entities/: boss.cpp  bullet.cpp  player.cpp
game_src/entities/bullet/: enermy_bullet.cpp
game_src/entities/spells/: concrete_spells.cpp
game_src/ui/: ui_manager.cpp
include/core/: bullet_manager.hpp  game.hpp
include/entities/: boss.hpp  bullet.hpp  entity.hpp  player.hpp  spellcard.hpp
include/entities/bullet/: enermy_bullet.hpp
include/entities/characters/: character.hpp  concrete_characters.hpp
include/entities/spells/: concrete_spells.hpp
include/ui/: ui_manager.hpp
include/utils/: bullet_types.hpp  constants.hpp
